--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ rvm:
   - 1.8.7
 
 before_script:
-  - ln -s chef-iptables-persistent ../iptables-persistent
+  - ln -s chef-prosody ../prosody
   - if echo $RUBY_VERSION | grep 1.8.7 >/dev/null; then rvm rubygems 1.8.25; gem --version; fi
