--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ language: ruby
 rvm:
   - 1.9.3
 
+gemfile:
+  - Gemfile
+  - spec/support/gemfiles/Gemfile.chef11
+
 before_script:
   - ln -s chef-prosody ../prosody
   - cd spec/support/; librarian-chef install; cd ../..
